--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+    id 'war'
 }
 
 group 'com.hard'
@@ -9,6 +9,14 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    springframework_version = "5.+"
+    servlet_api_version = "4.+"
+}
+
 dependencies {
+    implementation "org.springframework:spring-webmvc:${springframework_version}"
+    implementation "javax.servlet:javax.servlet-api:${servlet_api_version}"
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
