--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,27 @@ repositories {
 }
 
 ext {
-    springframework_version = "5.+"
     servlet_api_version = "4.+"
-    jackson_version = "2.+"
+    springframework_version = "5.+"
+    hibernate_version = "5.+"
     postgresql_version = "42.+"
+
+    jackson_version = "2.+"
+
+    junit_version = "5.+"
 }
 
 dependencies {
-    implementation "org.springframework:spring-webmvc:${springframework_version}"
     implementation "javax.servlet:javax.servlet-api:${servlet_api_version}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jackson_version}"
+    implementation "org.springframework:spring-webmvc:${springframework_version}"
+    implementation "org.hibernate:hibernate-core:${hibernate_version}"
     implementation "org.postgresql:postgresql:${postgresql_version}"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation "com.fasterxml.jackson.core:jackson-databind:${jackson_version}"
+
+    testImplementation "org.junit.jupiter:junit-jupiter:${junit_version}"
+}
+
+test {
+    useJUnitPlatform()
 }
